# speedy

./: .gitignore  CONVENTIONS.md  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: coverage.yml  nightly.yml  release.yml  rust.yml
speedy-cli/: Cargo.toml
speedy-cli/src/: main.rs
speedy-core/: Cargo.toml
speedy-core/src/: ffmpeg_wrapper.rs  lib.rs  presets.rs  stabilize.rs  video_processor.rs
